<resources>
    <string name="app_name">Web Services</string>
    <string name="product_information">Product Information</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="menu_option_populate_database">Populate Database</string>
    <string name="menu_option_delete_data">Delete data</string>
    <string name="empty_message">There are no items</string>
</resources>
